# cosmic-nebulae

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: BasicForceEngine.cpp  BasicForceEngine.hpp  Body.cpp  Body.hpp  CMakeLists.txt  ForceEngine.hpp  Integrator.cpp  Integrator.hpp  Leapfrog.cpp  Leapfrog.hpp  Simulator.cpp  Simulator.hpp  main.cpp
